--- a/index.html
+++ b/index.html
@@ -20,15 +20,28 @@
     <div id="map"></div>
     <script>
       function initMap() {
+        // map options
         var options = {
-          zoom: 4,
+          zoom: 12,
           center: {
-            lat: 1.2921,
-            lng: 36.8219
+            lat: -1.2681032,
+            lng: 36.8012525
           }
         };
 
+        // new map
         var map = new google.maps.Map(document.getElementById('map'), options);
+
+        // map maker
+        var marker = new google.maps.Marker({
+          position: {
+            lat: -1.2681032,
+            lng: 36.8012525
+          },
+          map: map,
+          icon:
+            'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
+        });
       }
     </script>
 
