--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
           icon:
             'https://developers.google.com/maps/documentation/javascript/examples/full/images/beachflag.png'
         });
+
+        // info window
+        var infoWindow = new google.maps.InfoWindow({
+          content: '<h3>Westlands</h3>'
+        });
+
+        // listen for a click
+        marker.addListener('click', function() {
+          infoWindow.open(map, marker);
+        });
       }
     </script>
 
