--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
         // new map
         var map = new google.maps.Map(document.getElementById('map'), options);
 
+        // listen for click on map
+        google.maps.event.addListener(map, 'click', function(event) {
+          // add marker
+          addMaker({ coords: event.latLng });
+        });
+
         // markers array
         var markers = [
           {
